<resources>
    <string name="app_name">pastelist</string>
    <string name="task_name">Task name</string>
    <string name="add_task">Add task</string>
    <string name="inbox">Inbox</string>
    <string name="task_description">Task description</string>
    <string name="atTaskDate">Task date</string>
    <string name="atTaskTime">Task time</string>
    <string name="switch_views">Switch views</string>
    <string name="add_time">Add time</string>
    <string name="no_date">No date</string>
    <string name="date">Date</string>
    <string name="upcoming">Upcoming</string>
    <string name="overdue">OVERDUE</string>
    <string name="clock_icon">Clock icon</string>
    <string name="calendar_icon">Calendar icon</string>
    <string name="preferences">Preferences</string>
    <string name="tasks">Tasks</string>
    <string name="tmp">tmp</string>

    <string name="delete_task">Delete task?</string>
    <string name="delete_task_no_question_mark">Delete task</string>
    <string name="keep_it">Keep it</string>
    <string name="yes_delete">Yes, delete</string>

    <string name="menu">Menu</string>

    <string name="duplicate_task">Duplicate task</string>

    <string name="add_subtask">Add sub-task</string>

    <string name="account">Account</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="cloud_backup">Cloud Backup</string>
    <string name="backup_description">Save or load your tasks using Firebase.</string>
    <string name="backup_tasks">Sync To Cloud</string>
    <string name="restore_tasks">Load from Cloud</string>

    <string name="reminder">Reminder</string>
    <string name="subtasks">Subtasks</string>


    <string name="reminder_none">No reminder</string>
    <string name="reminder_due_time">At due time</string>
    <string name="reminder_1_hour">1 hour before</string>
    <string name="reminder_1_day">1 day before</string>
    <string name="reminder_custom">Custom</string>
    <string name="save">Save</string>

    <string name="preferences_subtitle">Manage your account and backup options</string>
    <string name="search_tasks">Search Tasks</string>
    <string name="sign_in_subtitle">Sign in to sync tasks</string>

    <string name="search">Search</string>
    <string name="search_subtitle">Find your tasks quickly</string>
    <string name="search_task_name">Search task name</string>
    <string name="category">Category</string>
    <string name="category_subtitle">Choose where this task belongs</string>
    <string name="category_school">School</string>
    <string name="category_work">Work</string>
    <string name="category_none">None</string>
    <string name="category_personal">Personal</string>

    <string name="air"> </string>
</resources>