<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reminderRadioGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingStart="24dp"
    android:paddingTop="20dp"
    android:paddingEnd="24dp"
    android:paddingBottom="12dp">

    <RadioButton
        android:id="@+id/reminder_none"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:buttonTint="@color/pastelistGreen"
        android:gravity="center_vertical"
        android:text="@string/reminder_none"
        android:textColor="@color/textGray"
        android:textSize="16sp" />

    <RadioButton
        android:id="@+id/reminder_due_time"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:buttonTint="@color/pastelistGreen"
        android:gravity="center_vertical"
        android:text="@string/reminder_due_time"
        android:textColor="@color/textGray"
        android:textSize="16sp" />

    <RadioButton
        android:id="@+id/reminder_1_hour"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:buttonTint="@color/pastelistGreen"
        android:gravity="center_vertical"
        android:text="@string/reminder_1_hour"
        android:textColor="@color/textGray"
        android:textSize="16sp" />

    <RadioButton
        android:id="@+id/reminder_1_day"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:buttonTint="@color/pastelistGreen"
        android:gravity="center_vertical"
        android:text="@string/reminder_1_day"
        android:textColor="@color/textGray"
        android:textSize="16sp" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveReminder"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="@color/pastelistGreen"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:cornerRadius="0dp" />

</RadioGroup>